--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Talk 2Me Nice</title>
+</head>
+<body style="font-family: system-ui; background:#0f1218; color:#f5f6fa; padding:40px;">
+  <h1>Talk 2Me Nice</h1>
+  <p>The site is live. More coming soon.</p>
+</body>
+</html>
