--- a/index.html
+++ b/index.html
@@ -4,9 +4,151 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Talk 2Me Nice</title>
+
+  <!-- Accessibility & school-safe meta -->
+  <meta name="description" content="Talk 2Me Nice is a calm, conversation-first language companion. No lessons. No pressure. Just real talk." />
+  <meta name="robots" content="index, follow" />
+
+  <style>
+    :root {
+      --bg-main: #0f1218;
+      --bg-card: #1a1f2b;
+      --accent: #e6c7ff;
+      --accent-soft: #2b2f3a;
+      --text-main: #f5f6fa;
+      --text-muted: #b7bccb;
+    }
+
+    * { box-sizing: border-box; }
+
+    body {
+      margin: 0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
+      background: var(--bg-main);
+      color: var(--text-main);
+      line-height: 1.6;
+    }
+
+    main {
+      max-width: 980px;
+      margin: 0 auto;
+      padding: 3rem 1.5rem;
+    }
+
+    header {
+      text-align: center;
+      margin-bottom: 4rem;
+    }
+
+    h1 {
+      font-size: 2.6rem;
+      font-weight: 600;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      color: var(--text-muted);
+      max-width: 720px;
+      margin: 0 auto 1.2rem;
+    }
+
+    .card {
+      background: var(--bg-card);
+      border-radius: 16px;
+      padding: 2rem;
+      margin: 2rem 0;
+      border: 1px solid var(--accent-soft);
+    }
+
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 1.2rem 0 0;
+    }
+
+    li {
+      margin-bottom: 0.6rem;
+    }
+
+    .cta {
+      display: inline-block;
+      margin-top: 2.5rem;
+      padding: 0.9rem 2rem;
+      border-radius: 999px;
+      background: var(--accent);
+      color: #1a1a1a;
+      text-decoration: none;
+      font-weight: 500;
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 5rem;
+      font-size: 0.85rem;
+      color: var(--text-muted);
+    }
+
+    footer a {
+      color: var(--text-muted);
+      text-decoration: none;
+      margin: 0 0.5rem;
+    }
+  </style>
 </head>
-<body style="font-family: system-ui; background:#0f1218; color:#f5f6fa; padding:40px;">
-  <h1>Talk 2Me Nice</h1>
-  <p>The site is live. More coming soon.</p>
+
+<body>
+  <main>
+    <header>
+      <h1>Talk 2Me Nice</h1>
+      <p>Talk like a friend. Learn naturally. Feel safe.</p>
+      <a class="cta" href="#">Start Talking</a>
+    </header>
+
+    <section class="card">
+      <h2>What It Is</h2>
+      <p>
+        Talk 2Me Nice is a calm, conversation-first language companion.
+        There are no lessons, tests, or streaks — just everyday conversation,
+        support when you need it, and space to learn at your own pace.
+      </p>
+      <ul>
+        <li>💬 Natural conversations</li>
+        <li>🌍 Speak and listen in both languages</li>
+        <li>❓ Ask anytime: “How do you say…?”</li>
+        <li>📖 Built-in dictionary with tap & long-press</li>
+        <li>🔤 Alphabet & numbers spoken on demand</li>
+        <li>🧚 Gentle companions that react to time & mood</li>
+      </ul>
+    </section>
+
+    <section class="card">
+      <h2>Who It’s For</h2>
+      <ul>
+        <li>Students learning a new language</li>
+        <li>Families learning together</li>
+        <li>Educators looking for calm tools</li>
+        <li>Anyone who prefers conversation over drills</li>
+      </ul>
+    </section>
+
+    <section class="card">
+      <h2>Nice+ (Optional)</h2>
+      <p>Free works beautifully. Nice+ simply adds more room to explore.</p>
+      <ul>
+        <li>🎙️ Extended voice chat</li>
+        <li>🧚 All companions (whisp, star, puff)</li>
+        <li>🎭 Personality options</li>
+        <li>⚡ Adjustable response speed</li>
+        <li>📖 Unlimited tap-to-translate</li>
+      </ul>
+      <p>Monthly or yearly. Cancel anytime.</p>
+    </section>
+
+    <footer>
+      <a href="#">Privacy</a> •
+      <a href="#">Support</a>
+      <p>© Talk 2Me Nice</p>
+    </footer>
+  </main>
 </body>
 </html>
