--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 
     <footer>
       <a href="privacy.html">Privacy</a> •
-      <a href="terms.html">Terms</a>
+      <a href="terms.html">Support</a>
       <p>© Talk 2Me Nice</p>
     </footer>
   </main>
