--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Talk 2Me Nice</title>
-
-  <!-- Accessibility & school-safe meta -->
-  <meta name="description" content="Talk 2Me Nice is a calm, conversation-first language companion. No lessons. No pressure. Just real talk." />
-  <meta name="robots" content="index, follow" />
-
   <style>
     :root {
       --bg-main: #0f1218;
@@ -40,17 +35,9 @@
       margin-bottom: 4rem;
     }
 
-    h1 {
-      font-size: 2.6rem;
-      font-weight: 600;
-      margin-bottom: 1rem;
-    }
+    h1 { font-size: 2.6rem; font-weight: 600; margin-bottom: 1rem; }
 
-    p {
-      color: var(--text-muted);
-      max-width: 720px;
-      margin: 0 auto 1.2rem;
-    }
+    p { color: var(--text-muted); max-width: 720px; margin: 0 auto 1.2rem; }
 
     .card {
       background: var(--bg-card);
@@ -60,15 +47,9 @@
       border: 1px solid var(--accent-soft);
     }
 
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 1.2rem 0 0;
-    }
+    ul { list-style: none; padding: 0; margin: 1.2rem 0 0; }
 
-    li {
-      margin-bottom: 0.6rem;
-    }
+    li { margin-bottom: 0.6rem; }
 
     .cta {
       display: inline-block;
@@ -95,7 +76,6 @@
     }
   </style>
 </head>
-
 <body>
   <main>
     <header>
@@ -144,14 +124,12 @@
       <p>Monthly or yearly. Cancel anytime.</p>
     </section>
 
+    <!-- Footer with functional links -->
     <footer>
-      <a href="privacy.html">Privacy</a> •
-      <a href="terms.html">Support</a>
+      <a href="/privacy.html">Privacy</a> •
+      <a href="/terms.html">Support</a>
       <p>© Talk 2Me Nice</p>
     </footer>
   </main>
 </body>
 </html>
-index.html
-privacy.html
-terms.html
