--- a/index.html
+++ b/index.html
@@ -254,3 +254,11 @@ function sendMessage() {
 </script>
 </body>
 </html>
+let NICE_PLUS = false; // true if user subscribes
+function accessFeature(feature) {
+  if(feature.locked && !NICE_PLUS){
+    showPaywall(); // placeholder alert or overlay
+    return false;
+  }
+  return true;
+}
