--- a/index.html
+++ b/index.html
@@ -62,12 +62,24 @@ footer a:hover { text-decoration:underline; }
 
   <label for="language">Select Your Language (Free):</label>
   <select id="language">
+    <!-- Free languages -->
     <option value="en-US">English ✔</option>
+    <option value="es-ES">Spanish ✔</option>
+    <option value="fr-FR">French ✔</option>
+    <option value="de-DE">German ✔</option>
+    <option value="zh-CN">Chinese ✔</option>
+
+    <!-- Locked / Nice+ -->
+    <option value="ja-JP" data-locked="true">Japanese 🔒</option>
+    <option value="ko-KR" data-locked="true">Korean 🔒</option>
+    <option value="it-IT" data-locked="true">Italian 🔒</option>
   </select>
 
   <label for="companion">Choose a Companion:</label>
   <select id="companion">
     <option value="whisp">Whisp ✔</option>
+    <option value="star" data-locked="true">Star 🔒</option>
+    <option value="puff" data-locked="true">Puff 🔒</option>
   </select>
 
   <p>Nice+ unlocks extra languages, companions, and voice chat!</p>
@@ -86,73 +98,15 @@ function enterApp(){
   const language = document.getElementById('language').value;
   const companion = document.getElementById('companion').value;
 
-  // Save to local storage or pass to main app
+  // Save to local storage for main app
   localStorage.setItem('nickname', nickname);
   localStorage.setItem('language', language);
   localStorage.setItem('companion', companion);
 
   // Redirect to main app page
-  window.location.href = "/index.html"; // replace with your main chat page
-}
-</script>
-// landing.html
-function enterApp() {
-  const nickname = document.getElementById('nickname').value || 'Friend';
-  const language = document.getElementById('language').value;
-  const companion = document.getElementById('companion').value;
-
-  // Save choices
-  localStorage.setItem('nickname', nickname);
-  localStorage.setItem('language', language);
-  localStorage.setItem('companion', companion);
-
-  // Redirect to main app
   window.location.href = "/index.html";
 }
-// index.html
-const nickname = localStorage.getItem('nickname') || 'Friend';
-const selectedLanguage = localStorage.getItem('language') || 'en-US';
-const selectedCompanion = localStorage.getItem('companion') || 'whisp';
-
-// Set greeting
-document.getElementById('greeting').textContent = `Hi ${nickname}! Talk like a friend. Learn naturally. Feel safe.`;
-
-// Preselect language & companion in gear bubble
-document.getElementById('languageSelect').value = selectedLanguage;
-document.getElementById('companionSelect').value = selectedCompanion;
+</script>
 
 </body>
 </html>
-<label for="language">Select Your Language (Free):</label>
-<select id="language">
-  <!-- Free languages -->
-  <option value="en-US">English ✔</option>
-  <option value="es-ES">Spanish ✔</option>
-  <option value="fr-FR">French ✔</option>
-  <option value="de-DE">German ✔</option>
-  <option value="zh-CN">Chinese ✔</option>
-
-  <!-- Nice+ locked languages -->
-  <option value="ja-JP" data-locked="true">Japanese 🔒</option>
-  <option value="ko-KR" data-locked="true">Korean 🔒</option>
-  <option value="it-IT" data-locked="true">Italian 🔒</option>
-</select>
-<select id="languageSelect" style="margin-bottom:0.5rem; width:100%; padding:0.3rem;">
-  <!-- Free languages -->
-  <option value="en-US" data-locked="false">English ✔</option>
-  <option value="es-ES" data-locked="false">Spanish ✔</option>
-  <option value="fr-FR" data-locked="false">French ✔</option>
-  <option value="de-DE" data-locked="false">German ✔</option>
-  <option value="zh-CN" data-locked="false">Chinese ✔</option>
-
-  <!-- Locked / Nice+ -->
-  <option value="ja-JP" data-locked="true">Japanese 🔒</option>
-  <option value="ko-KR" data-locked="true">Korean 🔒</option>
-  <option value="it-IT" data-locked="true">Italian 🔒</option>
-</select>
-const languageSelect = document.getElementById('languageSelect');
-[...languageSelect.options].forEach(opt => {
-  if(opt.dataset.locked === "true" && !NICE_PLUS) {
-    opt.style.display = "none"; // hide locked
-  }
-});
