--- a/index.html
+++ b/index.html
@@ -110,3 +110,16 @@ function enterApp(){
 
 </body>
 </html>
+<select id="languageSelect" style="margin-bottom:0.5rem; width:100%; padding:0.3rem;">
+  <!-- Free languages -->
+  <option value="en-US" data-locked="false">English ✔</option>
+  <option value="es-ES" data-locked="false">Spanish ✔</option>
+  <option value="fr-FR" data-locked="false">French ✔</option>
+  <option value="de-DE" data-locked="false">German ✔</option>
+  <option value="zh-CN" data-locked="false">Chinese ✔</option>
+
+  <!-- Locked / Nice+ -->
+  <option value="ja-JP" data-locked="true">Japanese 🔒</option>
+  <option value="ko-KR" data-locked="true">Korean 🔒</option>
+  <option value="it-IT" data-locked="true">Italian 🔒</option>
+</select>
